--- a/src/main/frontend/src/AlgosList.css
+++ b/src/main/frontend/src/AlgosList.css
@@ -1,3 +1,11 @@
-.center {
-    text-align: center;
+.MuiListItem-root {
+    justify-content: center !important;
+}
+
+.MuiListItem-root > a {
+    color: black;
+}
+
+.list-container {
+    padding: 2em;
 }
