--- a/src/main/frontend/src/components/NetworkGraph.css
+++ b/src/main/frontend/src/components/NetworkGraph.css
@@ -5,6 +5,7 @@
     font-weight: 700;
     font-size: 13px;
     background: #ececec;
+    color: #222831 !important;
 }
 
 .react-flow__edge-text {
