dijkstra work in progress, PriorityQueue TODO

--- a/src/main/frontend/src/components/NetworkGraph/NetworkGraph.css
+++ b/src/main/frontend/src/components/NetworkGraph/NetworkGraph.css
@@ -1,6 +1,3 @@
-.edgestyle {
-}
-
 .nodestyle {
     font-weight: 700;
     font-size: 13px;
@@ -11,4 +8,8 @@
 .react-flow__edge-text {
     font-size: 13px;
     font-weight: 700;
+}
+
+.react-flow__edge-path {
+    stroke: black;
 }
